Added JMS tests