@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one
+  or more contributor license agreements. See the NOTICE file
+  distributed with this work for additional information
+  regarding copyright ownership. The ASF licenses this file
+  to you under the Apache License, Version 2.0 (the
+  "License"); you may not use this file except in compliance
+  with the License. You may obtain a copy of the License at
+ 
+  http://www.apache.org/licenses/LICENSE-2.0
+ 
+  Unless required by applicable law or agreed to in writing,
+  software distributed under the License is distributed on an
+  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  KIND, either express or implied. See the License for the
+  specific language governing permissions and limitations
+  under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-	<!-- Copyright (C) 2010 Talend Inc. - www.talend.com -->
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +30,7 @@
 
 	<properties>
 		<activemq.version>5.5.0</activemq.version>
-		<cxf.version>2.4.0</cxf.version>
+		<cxf.version>2.5.0-SNAPSHOT</cxf.version>
 		<camel.version>2.7.1</camel.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<jetty.version>7.2.2.v20101205</jetty.version>
@@ -31,11 +47,11 @@
 			<artifactId>cxf-rt-transports-jms</artifactId>
 			<version>${cxf.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http-jetty</artifactId>
-			<version>${cxf.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.cxf</groupId> -->
+<!-- 			<artifactId>cxf-rt-transports-http-jetty</artifactId> -->
+<!-- 			<version>${cxf.version}</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
@@ -113,7 +129,7 @@
 				<version>${cxf.version}</version>
 				<executions>
 					<execution>
-						<id>generate-sources</id>
+						<id>generate-cxf-sources</id>
 						<phase>generate-sources</phase>
 						<configuration>
 							<wsdlOptions>
@@ -189,6 +205,32 @@
                                 </goals>
                                 <configuration>
                                     <mainClass>com.example.customerservice.server.CustomerServiceSpringServer</mainClass>
+                                    <commandlineArgs>
+                                    	-Xmx1024m -XX:MaxPermSize=128m
+                                    </commandlineArgs>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jms.client</id>
+            <build>
+                <defaultGoal>test</defaultGoal>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>com.example.customerservice.client.CustomerServiceSpringClientJms</mainClass>
                                     <commandlineArgs>
                                     	-Xmx1024m -XX:MaxPermSize=128m
                                     </commandlineArgs>
